[tool.poetry]
name = "seminaire_2022"
version = "0.1.0"
description = "This is the code for the cui seminaire of the 12 december 2022, Escalade day in Geneva"
authors = ["Helene de Ribaupierre <helene.deribaupierre@frontiersin.net>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"


neo4j = "^5.3.0"
pandas = "^1.5.2"
numpy = "^1.23.5"
graphdatascience = "^1.5"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
